@@ -40,4 +40,4 @@ SOCKS_USER =
 THREADS = 1
 URL = /satellite_proxy/satellite_proxy.php
 REQUESTS_LOG = requests.log
-
+SELECTOR_CONF = proxy_selectors.cfg
