@@ -1,3 +1,11 @@
+2011-08-31 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* central_proxy/ProxyFilter.pm: Created dummy ProxyFilter lib
+	* central_proxy/proxy_selectors.cfg: Firt version of proxy selector conf file 
+	* central_proxy/central_proxy.pl: Added support for ProxyFilter and ProxySelector libs
+	* central_proxy/central_proxy.cfg: Added new parameter for proxy selector conf files.
+	* central_proxy/ProxySelector.pm: Created dummy ProxySelector lib
+
 2011-08-30 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* central_proxy/central_proxy.pl: Modified central_proxy to support request
